# paystub-service

./: .gitignore  DEPLOY.md  Makefile  README.md  docker-compose.prod.yml  docker-compose.yml  ngrok.yml
backend/: .dockerignore  .env.example  Dockerfile  alembic.ini  check_watches_db.py  pyproject.toml  resy_find_response_sample.json
backend/alembic/: env.py
backend/app/: README.md  __init__.py  config.py  main.py
backend/docs/: API_IOS.md  ARCHITECTURE.md  DATABASE_ARCHITECTURE.md  DB_SCALABILITY_REVIEW.md  DESIGN_PRINCIPLES.md  DISCOVERY.md  DISCOVERY_BLUEPRINT.md  DISCOVERY_POLL_ALGORITHM.md  LOCAL_DEV.md  MARKET_HOT_DROPS.md  MARKET_INTELLIGENCE_DESIGN.md  METRICS_ROADMAP.md  NOTIFICATIONS_DB.md  ONE_TIME_MIGRATIONS.md  PRODUCTION_HARDENING.md  PROVIDERS.md  RANKING_SPEC.md  RESY_BOOK.md  SCALABILITY.md  SCALABILITY_AND_MAINTENANCE.md  SCALABLE_DISCOVERY_ARCHITECTURE.md  TARGET_SCHEMA_AND_INVARIANTS.md  VALUE_FROM_DATA.md
backend/scripts/: backfill_venues_from_drop_events.py  chat_ui.py  check_backend.py  check_discovery_invariants.py  clear_discovery_tables.py  clear_resy_db.py  delete_closed_drop_events.py  discovery_debug.py  drop_schema_and_migrate.py  migrate_closed_events_to_aggregation.py  opentable_test_standalone.py  reconcile_drop_events.py  refresh_baselines.py  reset_all_discovery_and_metrics.py  resy_venue_search_curl.sh  run_aggregate_metrics.py  test_resy_per_page.py  wait-for-db.sh
backend/tests/: test_aggregation_metrics.py  test_eligibility.py  test_feed_eligibility.py  test_invariant_checks.py  test_opportunity_state.py  (+2 more)
ios/: README.md
(+285 files in other folders)
